--- a/package.json
+++ b/package.json
@@ -46,13 +46,18 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.10.2",
+    "@types/jest": "^26.0.22",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "size-limit": "^4.10.2",
+    "ts-jest": "^26.5.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "airtable": "^0.10.1"
+    "@types/isomorphic-fetch": "^0.0.35",
+    "airtable": "^0.10.1",
+    "isomorphic-fetch": "^3.0.0"
   }
 }
