--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@notionhq/client": "^0.4.13",
     "@types/isomorphic-fetch": "^0.0.35",
     "airtable": "^0.11.1",
     "isomorphic-fetch": "^3.0.0",
-    "rsuv-lib": "^2.8.0"
+    "rsuv-lib": "^2.9.0"
   },
   "keywords": [
     "database",
